設置vue-i18n及pinia、axios基本函數

--- a/i18n/language/en.json
+++ b/i18n/language/en.json
@@ -1,4 +1,11 @@
 {
   "welcome": "Welcome",
-  "test": "Test"
+  "test": "Test",
+  "operation": "Operation",
+  "name": "Name",
+  "age": "Age",
+  "edit": "Edit",
+  "add" : "Add",
+  "confirm": "Confirm",
+  "cancel": "Cancel"
 }
