--- a/i18n/language/tw.json
+++ b/i18n/language/tw.json
@@ -1,4 +1,11 @@
 {
   "welcome": "歡迎",
-  "test": "測試"
+  "test": "測試",
+  "operation": "操作",
+  "name": "名子",
+  "age": "年齡",
+  "edit":  "修改",
+  "add" : "新增",
+  "confirm": "確認",
+  "cancel": "取消"
 }
