修正修改操作邏輯

--- a/i18n/language/en.json
+++ b/i18n/language/en.json
@@ -8,5 +8,8 @@
   "add" : "Add",
   "delete": "Delete",
   "confirm": "Confirm",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+  "dialog_confirm_add": "Confirm Add?",
+  "dialog_confirm_edit": "Confirm Edit?",
+  "dialog_confirm_delete": "Confirm Delete?"
 }
