前端資料驗證

--- a/i18n/language/tw.json
+++ b/i18n/language/tw.json
@@ -10,6 +10,6 @@
   "confirm": "確認",
   "cancel": "取消",
   "dialog_confirm_add": "確定新增嗎",
-  "dialog_confirm_edit": "確定編輯嗎",
+  "dialog_confirm_edit": "確定修改嗎",
   "dialog_confirm_delete": "確定刪除嗎"
 }
